--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "nesbot/carbon": "^2.22",
         "eonx-com/easy-logging": "^2.5",
         "eonx-com/apiformats": "^1.0",
-        "illuminate/support": "^5.5",
+        "illuminate/support": "^5.5 || ^6.0",
         "symfony/console": "^4.2 || ^5.0"
     },
     "require-dev": {
