--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5 || ^8.4",
-        "mockery/mockery": "^1.2",
-        "laravel/lumen-framework": "^5.5"
+        "laravel/lumen-framework": "^5.5",
+        "symfony/symfony": "^4.2 || ^5.0"
     },
     "autoload": {
         "psr-4": {
