--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.1",
-        "nesbot/carbon": "^2.22",
-        "eonx-com/easy-logging": "^2.4.45",
-        "eonx-com/apiformats": "^1.0",
-        "illuminate/support": "^5.5 || ^6.0",
-        "symfony/console": "^4.2 || ^5.0"
+        "nesbot/carbon": "^2.22"
     },
     "require-dev": {
+        "eonx-com/easy-logging": "^2.4.45",
         "phpunit/phpunit": "^7.5 || ^8.4",
         "laravel/lumen-framework": "^5.5",
         "symfony/symfony": "^4.2 || ^5.0"
