--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,12 @@
     "require": {
         "php": "^7.1",
         "nesbot/carbon": "^2.22",
-        "eonx-com/easy-logging": "^2.4.49",
-        "eonx-com/apiformats": "^1.0",
-        "illuminate/support": "^5.5 || ^6.0",
-        "symfony/console": "^4.2 || ^5.0"
+        "eonx-com/easy-logging": "^2.4.45"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5 || ^8.4",
-        "mockery/mockery": "^1.2",
-        "laravel/lumen-framework": "^5.5"
+        "laravel/lumen-framework": "^5.5 || ^6.0",
+        "symfony/symfony": "^4.2 || ^5.0"
     },
     "autoload": {
         "psr-4": {
