--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5 || ^8.4",
-        "laravel/lumen-framework": "^5.5 || ^6.0",
+        "laravel/lumen-framework": "^5.5",
         "symfony/symfony": "^4.2 || ^5.0"
     },
     "autoload": {
