--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "nesbot/carbon": "^2.22",
-        "eonx-com/easy-logging": "^2.6"
+        "eonx-com/easy-logging": "^2.6",
+        "eonx-com/easy-utils": "^2.6",
+        "nesbot/carbon": "^2.22"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4 || ^9.5",
