--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         "nesbot/carbon": "^2.22"
     },
     "require-dev": {
+        "eonx-com/easy-bugsnag": "^2.6",
         "phpunit/phpunit": "^8.4 || ^9.5",
         "laravel/lumen-framework": "^5.5",
-        "symfony/symfony": "^4.2 || ^5.0"
+        "symfony/symfony": "^4.4 || ^5.0"
     },
     "autoload": {
         "psr-4": {
