--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "eonx-com/easy-logging": "^2.6",
-        "eonx-com/easy-utils": "^2.6",
+        "eonx-com/easy-logging": "3.x-dev",
+        "eonx-com/easy-utils": "3.x-dev",
         "nesbot/carbon": "^2.22"
     },
     "require-dev": {
-        "eonx-com/easy-bugsnag": "^2.6",
+        "eonx-com/easy-bugsnag": "3.x-dev",
         "phpunit/phpunit": "^8.4 || ^9.5",
         "laravel/lumen-framework": "^5.5",
         "symfony/symfony": "^4.4 || ^5.0"
