--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "autoload": {
         "psr-4": {
-            "EonX\\EasyErrorHandler\\": "src"
+            "EonX\\EasyErrorHandler\\": "src",
+            "EonX\\EasyErrorHandler\\Bridge\\Symfony\\": "src/Bridge/Symfony"
         }
     },
     "autoload-dev": {
