--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": "^7.2",
         "eonx-com/easy-logging": "^3.1",
         "eonx-com/easy-utils": "^3.1",
-        "nesbot/carbon": "^2.22"
+        "nesbot/carbon": "^1.39 || ^2.22"
     },
     "require-dev": {
         "eonx-com/easy-bugsnag": "^3.1",
