--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 || ^8.0",
         "eonx-com/easy-logging": "^3.4",
         "eonx-com/easy-utils": "^3.4",
         "nesbot/carbon": "^1.39 || ^2.22"
@@ -12,7 +12,7 @@
     "require-dev": {
         "eonx-com/easy-bugsnag": "^3.4",
         "phpunit/phpunit": "^8.4 || ^9.5",
-        "laravel/lumen-framework": "^5.5",
+        "laravel/lumen-framework": "^5.5 || ^8.1",
         "symfony/symfony": "^4.4 || ^5.1.5"
     },
     "autoload": {
